syntax = "proto3";
package pb;

service User {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    int32 responseCode = 1;
    string userToken = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string firstname = 3;
    string lastname = 4;
    string birth = 5;
}

message RegisterResponse {
    string message = 2;
}